--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,9 @@ target 'ReactNativeFBSDK' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'FBSDKCoreKit'
+  pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
+
   target 'ReactNativeFBSDKTests' do
     inherit! :search_paths
     # Pods for testing
